2002-08-06  Tim Coleman <tim@timcoleman.com>
	* ServiceDescription.cs:
		Change the XmlElement name from "type" to "types" for
		the Types object

2002-08-06  Tim Coleman <tim@timcoleman.com>
	* ServerProtocol.cs:
		Add new class as implied by class statuc page.
		SoapServerProtocol is derived from this.
	* SoapServerProtocol.cs:
		Change base class to ServerProtocol.
	* SoapClientMethod.cs:
		This class should not be sealed.

2002-08-03  Tim Coleman <tim@timcoleman.com>
	* SoapProtocolReflector.cs:
		Removed SoapBinding property and made the class
		not sealed to agree with class reference page.

2002-08-03  Tim Coleman <tim@timcoleman.com>
	* ServiceDescriptionBaseCollection.cs:
		Removed some NotImplementedException()'s so that
		it runs.

2002-07-26  Tim Coleman <tim@timcoleman.com>
	* ServiceDescription.cs:
		Changed the creation of the XmlSerializer after 
		consulting the System.Xml.Serialization namespace
		and trying to serialize a document.  Now works somewhat!

2002-07-25  Tim Coleman <tim@timcoleman.com>
	* OperationMessageCollection.cs:
		Some implementation of this class after consulting a
		WSDL reference.  Now validates the inputs.

2002-07-24  Tim Coleman <tim@timcoleman.com>	
	* ProtocolImporter.cs:
	* ProtocolReflector.cs:
		Some implementation of these classes.  MonoTODO's begone!
	* SoapProtocolImporter.cs:
		Changed description to literal string "Soap"
	* SoapProtocolReflector.cs:
		Added a new class based on guesswork and conjecture.

2002-07-24  Tim Coleman <tim@timcoleman.com>
	* ServiceDescription.cs:
		Implement Read/Write methods for serialization/
		deserialization.

2002-07-23  Tim Coleman <tim@timcoleman.com>
	* ServiceDescription.cs:
		Add XmlIgnore attribute to ServiceDescriptions property
	* OperationFlow.cs:
	* ServiceDescriptionImportWarnings.cs:
		Explicitly set values in enumeration to match
		.NET.

2002-07-22 Tim Coleman <tim@timcoleman.com>	
	* Binding.cs:
	* BindingCollection.cs:
	* DocumentableItem.cs:
	* FaultBinding.cs: